syntax = "proto3";
package saonetwork.sao.order;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "sao/order/params.proto";
import "sao/order/order.proto";
import "sao/order/expired_order.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/SaoNetwork/sao/x/order/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/SaoNetwork/sao/order/params";
  }

  // Queries a Order by id.
	rpc Order(QueryGetOrderRequest) returns (QueryGetOrderResponse) {
		option (google.api.http).get = "/SaoNetwork/sao/order/order/{id}";
	}

	// Queries a list of Order items.
	rpc OrderAll(QueryAllOrderRequest) returns (QueryAllOrderResponse) {
		option (google.api.http).get = "/SaoNetwork/sao/order/order";
	}

  // Queries a ExpiredOrder by index.
	rpc ExpiredOrder(QueryGetExpiredOrderRequest) returns (QueryGetExpiredOrderResponse) {
		option (google.api.http).get = "/SaoNetwork/sao/order/expired_order/{height}";
	}

	// Queries a list of ExpiredOrder items.
	rpc ExpiredOrderAll(QueryAllExpiredOrderRequest) returns (QueryAllExpiredOrderResponse) {
		option (google.api.http).get = "/SaoNetwork/sao/order/expired_order";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetOrderRequest {
	uint64 id = 1;
}

message QueryGetOrderResponse {
	Order Order = 1 [(gogoproto.nullable) = false];
}

message QueryAllOrderRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllOrderResponse {
	repeated Order Order = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}


message QueryGetExpiredOrderRequest {
	  uint64 height = 1;

}

message QueryGetExpiredOrderResponse {
	ExpiredOrder expiredOrder = 1 [(gogoproto.nullable) = false];
}

message QueryAllExpiredOrderRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllExpiredOrderResponse {
	repeated ExpiredOrder expiredOrder = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
